RESOLVED FIXED293258
REGRESSION (294368@main): Fixed elements in sticky containers are incorrectly positioned when scrolling
https://bugs.webkit.org/show_bug.cgi?id=293258
Summary REGRESSION (294368@main): Fixed elements in sticky containers are incorrectly...
Wenson Hsieh
Reported 2025-05-19 15:53:01 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-19 16:13:24 PDT
Wenson Hsieh
Comment 2 2025-05-19 16:49:19 PDT
EWS
Comment 3 2025-05-19 22:14:30 PDT
Committed 295143@main (6977b801a5f6): <https://commits.webkit.org/295143@main> Reviewed commits have been landed. Closing PR #45621 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.